maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:26: error: value nil is not a member of object List
    var next:List[Tuple2[Int,Int]] = List.nil
                                          ^ShortestPathMaze:47: error: value nil is not a member of object List
  var nextCase:List[Tuple2[Int,Int]]=List.nil
                                          ^